Bug 163042 - DOCX smart justify: bad cursor and pilcrow positions in last paragraph line with single portion
Summary: DOCX smart justify: bad cursor and pilcrow positions in last paragraph line w...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.2 target:24...
Keywords:
Depends on:
Blocks: DOCX-compatibilityMode-15 DOCX-Smart-Justify
  Show dependency treegraph
 
Reported: 2024-09-19 09:54 UTC by László Németh
Modified: 2025-09-10 07:39 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
test document (53.09 KB, application/vnd.oasis.opendocument.text-flat-xml)
2024-09-19 09:56 UTC, László Németh
Details
screenshot about the problems (6.57 KB, image/png)
2024-09-19 09:56 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2024-09-19 09:54:11 UTC
Description:
The detected problems, related to “smart justify”, the space shrinking interoperability feature (see Bug 119908):

– clicking before the last or the last but one characters of the line, the cursor is positioned at the end of the line, not before the last or the last but one characters;

– when the text cursor is there at the end, the visible cursor position is inside the line instead of the end of the line 

– pilcrow symbol is inside the line instead of the end of the line

Steps to Reproduce:
1. Open the attached test document
2. Click before the last character of the line

Actual Results:
The cursor is positioned at the end of the line (try to type). Despite its position, the cursor and the pilcrow are there inside the line instead of the end of the line.

Expected Results:
The cursor is positioned before the last character. The cursor and the pilcrow must follow the position of the cursor and the end of the paragraph.


Reproducible: Always


User Profile Reset: No

Additional Info:
The problem affects also version 24.8 and 24.2.
Comment 1 László Németh 2024-09-19 09:56:20 UTC
Created attachment 196536 [details]
test document
Comment 2 László Németh 2024-09-19 09:56:43 UTC
Created attachment 196537 [details]
screenshot about the problems
Comment 3 Commit Notification 2024-09-19 18:18:24 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2baaf66b71fd429479dddb41f6b06aa7bba61039

tdf#163042 sw smart justify: fix cursor of single portion lines

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-09-23 13:44:28 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/a167ca8d773277fada3704603bf213f09509d5ab

tdf#163042 sw smart justify: fix cursor of single portion lines

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-10-25 14:08:27 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6c799ef5d9a345d6ddfe62784172445bd9b44f18

tdf#163042 sw smart justify: fix cursor of single portion lines

It will be available in 24.2.8.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-10-28 13:03:55 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-7":

https://git.libreoffice.org/core/commit/b31809c2af54622ed2ce8846fefc742af0cced3b

tdf#163042 sw smart justify: fix cursor of single portion lines

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.