tdf#163042 sw smart justify: fix cursor of single portion lines

Fixed problems with cursor/pilcrow positions in a shrunk last
line of a paragraph with a single portion:

– clicking before the last or the last but one characters of the line,
  the cursor could be positioned at the end of the line, not before
  the last or the last but one characters (especially a line with
  more spaces and bigger space shrinking).

– when the text cursor was there at the end, the visible cursor position
  was inside the line instead of the end of the line;

– pilcrow symbol was inside the line instead of the end of the line.

Follow-up to commit 6b857398a59d16308d6185d01e003e401439f060
"tdf#162109 sw smart justify: fix overhanging last line"
and commit 22eac3145ca62d15b47d95f4df60ce38d4f5aa46
"tdf#162220 sw smart justify: fix shrinking for single portion lines".

Change-Id: I0057f17fe187381c4c5d78574dcd99e0dafc11b0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173662
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 2baaf66b71fd429479dddb41f6b06aa7bba61039)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173638
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175647
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
(cherry picked from commit b31809c2af54622ed2ce8846fefc742af0cced3b)